styled weather overview

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           />
           </div>
           <div class="col-3">
-          1°C|°F
+          <span id="current_temp">1</span>
+          <span class="units">°C|°F</span>
         </div>
         <div class="col-6">
           <ul id="parameters">
