added time function with time delay
trying to figure out the reason of time delay

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-6 info">
           <h2>Weather</h2>  
-          <h3 id="current_time">11 March 19:02</h3>
+          <h3 id="date"></h3>
 <h3 id="description"> </h3>        
         </div>
     </div>
