added units (celsius and Fahr)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src=""
                 alt="Clear" id="icon" />
                   <span id="temperatures"></span
-                  ><span id="Celsium">°C|</span><span id="units"> <a href="#"> °F</a></span>
+                  ><span id="Celsium"><a href="#" id=celsius-link class="active">°C|</a></span><span id="units"> <a href="#" id="fahrenheit-link"> °F</a></span>
               </div>
               </div>
           
