GitHub Link added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
   </div>
-      <small><a href="http://">open sourse code</a>, by  Tetiana Makhlai</a></small>
+      <small><a href="https://github.com/tetianamakhlai/vanila_weather_app.git" target="_blank">open sourse code</a>, by  Tetiana Makhlai</a></small>
       </div>
     </div>
     <script src="src/app.js"></script>
