Added weather forecast HTML+CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    
     <link rel="stylesheet" type="text/css" href="src/stylesApp.css" />
   </head>
   <body>
@@ -65,7 +64,22 @@
 <h3 id="description"> </h3>        
         </div>
     </div>
+    <div class="weather-forecast">
+    <div class="row">
+    <div class="col-2">
+      <div class="weather-forecast-day">
+        Thu
+      </div>
+      <img src="https://openweathermap.org/img/wn/10d@2x.png"
+       alt="Clear" id="icon" />
+      <div>
+      <spam id="weather-forecast-max">18° </spam> <spam id="weather-forecast-min">12°</spam>
+    </div>
+    </div>
   </div>
+  </div>
+  </div>
+  
       <small><a href="https://github.com/tetianamakhlai/vanila_weather_app.git" target="_blank">open sourse code</a>, by  Tetiana Makhlai</a></small>
       </div>
     </div>
