Added JS structure of forecast
-repeat the code with for.each and inserting of HTML directly to JS

--- a/index.html
+++ b/index.html
@@ -64,19 +64,7 @@
 <h3 id="description"> </h3>        
         </div>
     </div>
-    <div class="weather-forecast">
-    <div class="row">
-    <div class="col-2">
-      <div class="weather-forecast-day">
-        Thu
-      </div>
-      <img src="https://openweathermap.org/img/wn/10d@2x.png"
-       alt="Clear" id="icon" />
-      <div>
-      <spam id="weather-forecast-max">18° </spam> <spam id="weather-forecast-min">12°</spam>
-    </div>
-    </div>
-  </div>
+    <div class="weather-forecast" id="forecast">
   </div>
   </div>
   
