Mini changes HTML

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="container">
       <div class="weather-app-wrapper">
       <div class="weather-app">
-        <form id="search-form" class="mb-3">
+        <form id="search-form" class="mb-4">
           <div class="row">
             <div class="col-9">
-<input type="search" placeholder="type of a city..." class="form-control" id="cityInput"> </div>
+<input type="search" placeholder="" class="form-control" id="cityInput"> </div>
 <div class="col-3">
 <input type="submit" value="Search" class="btn btn-primary w-100" ></div>
 </div>
